--- a/damul-ocr/requirements.txt
+++ b/damul-ocr/requirements.txt
@@ -77,9 +77,9 @@ threadpoolctl==3.5.0
 tifffile==2024.8.30
 tokenizers==0.21.0
 tomli==2.2.1
-torch==2.6.0+cpu
-torchaudio==2.6.0+cpu
-torchvision==0.21.0+cpu
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
 tqdm==4.67.1
 transformers==4.49.0
 typing_extensions==4.12.2
