--- a/damul-client/package.json
+++ b/damul-client/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.473.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
