--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       - optional:classpath:.env[.properties]
       - optional:file:.env[.properties]
     profiles:
-      active: local
+      active: prod
 
 #  profiles:
 #    active: local
